# imperial-test-suite-runner

./: .gitattributes  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  build.sh  cabal.project  cabal.project.local  haskel-parser-js.cabal  haskell-parser-js.cabal  hie.yaml  package-lock.json  package.json
src/: extension.ts  parser.hs  parser.ts  testTree.ts
src/test/: test_parser.js
