cabal-version:      2.4
name:               haskell-parser-js
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mateusz Lichota
maintainer:         mateusz@lichota.net

executable haskell-parser-js
    main-is:          parser.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        aeson,
        directory,
        bytestring,
        regex-tdfa,
        haskell-src-exts,
        ghcjs-base,
    hs-source-dirs:   src

    default-language: Haskell2010
